changed nextStep to return GVec4, atRest handled by new method